# GHA-testing

./: .pre-commit-config.yaml  pyproject.toml
.github/: dependabot.yml  release-drafter.yml  release.yml
.github/workflows/: ci.yml  codeql.yml  db.yml  default.yml  pre-commit.yml  release-drafter.yml  release.yml  wfr.yml
.toolforge/jobs/: job1
jobs/: job1
sql/: create-tables.sql
src/pkg/: app.py
testing/: create-database
