[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
include = '\.py$'
line-length = 79  # default: 88


[tool.isort]
atomic = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3


[tool.poetry]
name = "pkg"
authors = ["Someone <info@example.com>"]
classifiers = [
    "Development Status :: 1 - Planning",
]
description = "description foo"
keywords = ["testing"]
packages = [
    { include = "pkg", from = "src" },
]
readme = "README.rst"
version = "22.3.19"

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
dotmap = "1.3.28"
mwparserfromhell = "0.6.4"
pywikibot = {version="7.1.0", extras=["mwoauth"]}

[tool.poetry.dev-dependencies]
pre-commit = "2.17.0"
pylint = "2.12.0"


[tool.pylint]

[tool.pylint.master]
# Use multiple processes to speed up Pylint.
jobs = 0  # default: 1

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = "e,i,j,k,_"  # default: i,j,k,ex,Run,_

[tool.pylint.design]
# Maximum number of parent classes
max-parents = 8  # default: 7

[tool.pylint.format]
max-line-length = 79  # default: 100

[tool.pylint.message_control]
disable = [
    "bad-continuation", # Conflickts with black. To be removed in 2.6.0.
    "bad-whitespace",   # Conflickts with black. To be removed in 2.6.0.
]

[tool.pylint.reports]
reports = "yes"
