[build-system]
requires = ["poetry>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py38"]
line-length = 79  # default: 88


[tool.isort]
py_version = 38
add_imports = ["from __future__ import annotations"]
atomic = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true


[tool.poetry]
name = "pkg"
authors = ["Someone <info@example.com>"]
classifiers = [
    "Development Status :: 1 - Planning",
]
description = "description foo"
keywords = ["testing"]
packages = [
    { include = "pkg", from = "src" },
]
readme = "README.rst"
version = "22.6.28"

[tool.poetry.dependencies]
python = "^3.8"
dotmap = "1.3.30"
mwparserfromhell = "0.6.4"
pywikibot = {version="8.0.0", extras=["mwoauth"]}

[tool.poetry.dev-dependencies]
pylint = "2.16.2"


[tool.pylint]

[tool.pylint.master]
# Use multiple processes to speed up Pylint.
jobs = 0  # default: 1

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = "e,i,j,k,_"  # default: i,j,k,ex,Run,_

[tool.pylint.design]
# Maximum number of parent classes
max-parents = 8  # default: 7

[tool.pylint.format]
max-line-length = 79  # default: 100

[tool.pylint.reports]
reports = "yes"
