[build-system]
requires = ["poetry>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
authors = [
    { name = "JJMC89" },
]
name = "pkg"
classifiers = [
    "Development Status :: 1 - Planning",
]
dependencies = [
    "dotmap == 1.3.30",
    "mwparserfromhell == 0.7.2",
    "pywikibot [mysql, mwoauth] == 11.1.0",
]
description = "description foo"
keywords = ["testing"]
packages = [
    { include = "pkg", from = "src" },
]
readme = "README.rst"
requires-python = ">=3.13"
version = "26.4.11"


[tool.black]
target-version = ["py313"]
line-length = 79  # default: 88


[tool.isort]
atomic = true
profile = "black"
py_version = 313
